feat: add separate configs
Squashed for rebase:
- Add new field `max_offline_size`.
- Use correct field.
- Adapt prover and verifier config.
- Adapt OT estimation
- Add feedback.
- Apply renaming also for transcript-config in tls-mpc.
- Fix notary server.
- Adapt wasm tests.
- Adapt discord example.
- Add defaults and repair wasm tests.
- Add feedback.
- Adapt method names.
- Add more feedback.
- Adapt ot estimation.
- Make deferred decryption default.
- Adapt wasm configs.
- Add feedback.
- fix: integration test no longer deadlocking.
- Apply defaults to whole workspace.
- Add `max_deferred_size` when default is not used.
- Enable notary server tests
