# crates/notary/server/src/service/websocket.rs
@@ -12,7 +12,8 @@ pub async fn websocket_notarize(
     notary_globals: NotaryGlobals,
     session_id: String,
     max_sent_data: Option<usize>,
-    max_recv_data: Option<usize>,
+    max_recv_data_online: Option<usize>,
+    max_deferred_size: Option<usize>,
 ) {
     debug!(?session_id, "Upgraded to websocket connection");
     // Wrap the websocket in WsStream so that we have AsyncRead and AsyncWrite implemented
@@ -22,7 +23,8 @@ pub async fn websocket_notarize(
         &notary_globals.notary_signing_key,
         &session_id,
         max_sent_data,
-        max_recv_data,
+        max_recv_data_online,
+        max_deferred_size,
     )
     .await
     {
